--- a/src/pages/components/footer/videoFooter.css
+++ b/src/pages/components/footer/videoFooter.css
@@ -1,6 +1,6 @@
 .videoFooter{
     position: relative;
-    bottom: 20%;
+    bottom: 23%;
     color: white;
     margin-left: 30px;
 }
@@ -57,4 +57,13 @@
         transform: translateX(-100%);
     }
     
+}
+
+@media only screen and (max-width: 440px){
+    .videoFooter{
+        bottom: 20%;
+    }
+    .videoFooterMusic__text{
+        width: 78%;
+    }
 }
