--- a/src/pages/components/sidebar/videoSideBar.css
+++ b/src/pages/components/sidebar/videoSideBar.css
@@ -1,6 +1,6 @@
 .videoSideBar{
     position: absolute;
-    top: 50%;
+    top: 33%;
     right: 10px;
     color: white;
 }
@@ -8,4 +8,10 @@
 .videoSideBar__options{
     padding: 20px;
     text-align: center;
+}
+
+@media only screen and (max-width: 440px){
+    .videoSideBar{
+        top: 46%;
+    }
 }
